--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -7,7 +7,8 @@ $color2: #709ECC;
 $color3: #6C767F;
 $color4: #8CC6FF;
 
-$gray: #e1e1e1;
+$gray: #EDF0F3;
+$light-gray: #F6F8FA;
 $black: #444;
 $white: #f4f4f4;
 $red: #e22d2d;
